--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,3 +33,9 @@
 <!-- dynamic way of messing with the length and using second argument -->
 
 <p>{{dummyText | summary:3}}</p>
+
+<app-post></app-post>
+
+<app-postlist></app-postlist>
+<app-betterform></app-betterform>
+<app-reactiveform></app-reactiveform>
